# ir2haskell

clir-parser-haskell-master/: README.md  clir-parser-haskell.cabal  clir-parser-haskell.cabal~  fill.clir  fill.clir~  insert.clir  insert.clir~  insert.hs~  stack.yaml  uutHeader.hs  uutHeader.hs~
clir-parser-haskell-master/app/: Main.hs  Main.hs~
clir-parser-haskell-master/lib/sexp-grammar/: sexp-grammar.cabal
clir-parser-haskell-master/lib/sexp-grammar/src/Language/Sexp/: Lexer.x
clir-parser-haskell-master/src/: Lib.hs  Lib.hs~  UUT.hs  UUT.hs~
clir-parser-haskell-master/src/DataStructures/: Arrays.hs~  Assertion.hs  Bags.hs  Bags.hs~  Sequences.hs  Sequences.hs~  Sets.hs~
clir-parser-haskell-master/src/Language/: Clir.hs  Clir.hs~
clir-parser-haskell-master/test/: Main.hs
